--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,17 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat">
-        <!-- Customize your theme here. -->
+    <style name="MyTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:editTextColor">#000</item>
+        <item name="android:textColorPrimary">#000</item>
+        <item name="android:textColorSecondary">#000</item>
+        <item name="android:textColorTertiary">#000</item>
+        <item name="android:textColorPrimaryInverse">#000</item>
+        <item name="android:textColorSecondaryInverse">#000</item>
+        <item name="android:textColorTertiaryInverse">#000</item>
     </style>
-    <style name="Theme.AppCompat.Light." parent="android:Theme"/>
 
 </resources>
